--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="pater/pater.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <script>
         document.documentElement.className = "js";
         var supportsCssVars = function() {
@@ -48,106 +49,236 @@
         <div class="content">
             <div class="grid">
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                     data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone 5s Gold.png" alt="iPhone 5s Gold" />
-                        <h2 class="product__title">iPhone 5s Gold</h2>
-                        <h3 class="product__subtitle">16GB | Oro </h3>
+                        <img class="product__img" 
+                         data-aos="fade-up"
+                         data-aos-duration="1000"
+                         data-aos-easing="ease-in-out"
+                         src="img/HRSiPhone 5s Gold.png" alt="iPhone 5s Gold" />
+                        <h2 class="product__title"
+                        data-aos="fade-down" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone 5s Gold</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">16GB | Oro </h3>
                         <p class="product__description">L’iPhone 5c è il modello base tra gli iPhone con stile dai colori vivaci, tra i quali l’azzurro, il grigio e il rosa. La fotocamera ti permette di catturare i tuoi momenti più belli in foto nitide e ben definite da inviare ad amici
                             e conoscenti. L’iPhone 5c funziona con sistema operativo iOS 10.3.3.</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€129</strike><span> €89</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone 8.png" alt="iPhone 8 64GB Grigio Siderale " />
-                        <h2 class="product__title">iPhone 8</h2>
-                        <h3 class="product__subtitle">64GB | Grigio Siderale </h3>
+                        <img class="product__img"
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone 8.png" alt="iPhone 8 64GB Grigio Siderale " />
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone 8</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">64GB | Grigio Siderale </h3>
                         <p class="product__description">Sistema a singola o doppia fotocamera (grandangolo e teleobiettivo) Fino a 14 ore di riproduzione video Resistente all’acqua (profondità massima di 1 metro fino a 30 minuti)</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€329</strike><span> €269</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone 8Plus Red.png" alt="iPhone 8plus Red" />
-                        <h2 class="product__title">iPhone 8Plus</h2>
-                        <h3 class="product__subtitle">256GB | Rosso </h3>
+                        <img class="product__img" 
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone 8Plus Red.png" alt="iPhone 8plus Red" />
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone 8Plus</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">256GB | Rosso </h3>
                         <p class="product__description">Tutti gli acquisti (PRODUCT)RED contribuiscono a fornire test, consulenza e terapie per decine di milioni di persone che convivono con HIV/AIDS</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€839</strike><span> €679</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone 6S Rose.png" alt="iPhone 6S 64GB Oro Rosa ricondizionato" />
-                        <h2 class="product__title">iPhone 6S</h2>
-                        <h3 class="product__subtitle">64GB | Oro Rosa </h3>
+                        <img class="product__img" 
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone 6S Rose.png" alt="iPhone 6S 64GB Oro Rosa ricondizionato" />
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone 6S</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">64GB | Oro Rosa </h3>
                         <p class="product__description">Smartphone 100% funzionante certificato Smarter. Il telefono potrebbe presentare graffi leggeri o piccoli segni di utilizzo sulla scocca e/o sullo schermo, che non ne condizionano l'utilizzo. Ha superato con successo il nostro
                             test in 28 passaggi per garantirti la massima soddisfazione</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€129</strike><span> €89</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone 7 black.png" alt="iPhone 7 256GB Nero ricondizionato" />
-                        <h2 class="product__title">iPhone 7</h2>
-                        <h3 class="product__subtitle">256GB | Nero</h3>
+                        <img class="product__img" 
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone 7 black.png" alt="iPhone 7 256GB Nero ricondizionato" />
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone 7</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">256GB | Nero</h3>
                         <p class="product__description">Smartphone 100% funzionante certificato Smarter. Il telefono potrebbe presentare graffi leggeri o piccoli segni di utilizzo sulla scocca e/o sullo schermo, che non ne condizionano l'utilizzo. Ha superato con successo il nostro
                             test in 28 passaggi per garantirti la massima soddisfazione</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€629</strike><span> €539</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone XS.png" alt="iPhone XS  Argento ricondizionato" />
-                        <h2 class="product__title">iPhone XS</h2>
-                        <h3 class="product__subtitle">256GB | Argento</h3>
+                        <img class="product__img" 
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone XS.png" alt="iPhone XS  Argento ricondizionato" />
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone XS</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">256GB | Argento</h3>
                         <p class="product__description">Apple iPhone XS è uno smartphone iOS con caratteristiche all’avanguardia che lo rendono una scelta eccellente per ogni tipo di utilizzo. Dispone di un grande display da 5.8 pollici e di una risoluzione da 2436×1125 pixel, fra le
                             più elevate attualmente in circolazione.</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€1329</strike><span> €899</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone 7 black.png" alt="iPhone 7 ricondizionato" />
-                        <h2 class="product__title">iPhone 7</h2>
-                        <h3 class="product__subtitle">32GB | Nero </h3>
+                        <img class="product__img" 
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone 7 black.png" alt="iPhone 7 ricondizionato" />
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone 7</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">32GB | Nero </h3>
                         <p class="product__description">Smartphone 100% funzionante certificato Smarter. Il telefono potrebbe presentare graffi leggeri o piccoli segni di utilizzo sulla scocca e/o sullo schermo, che non ne condizionano l'utilizzo. Ha superato con successo il nostro
                             test in 28 passaggi per garantirti la massima soddisfazione</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€129</strike><span> €89</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone 6 silver.png" alt="iphone 6s silver argento ricondizionato" />
-                        <h2 class="product__title">iPhone 6s</h2>
-                        <h3 class="product__subtitle">128GB | Argento </h3>
+                        <img class="product__img" 
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone 6 silver.png" alt="iphone 6s silver argento ricondizionato" />
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone 6s</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">128GB | Argento </h3>
                         <p class="product__description">Apple Modello: 6S 16GB 64Gb 128 Gb Peso articolo: 141 g Dimensioni: 13,8 x 6,7 x 0,7 cm RAM: 2 GB Memoria: 16 GB 64GB 128Gb Sistema operativo: iOS Schermo: 4.70 polliciRisoluzione schermo: 1080p Full HDRisoluzione sensore ottico: 12 MP Batteria: Ioni di litio Connettività: wifi, usb.</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€129</strike><span> €89</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone XR blue.png" alt="iPhone XR 64GB blu" />
-                        <h2 class="product__title">iPhone XR</h2>
-                        <h3 class="product__subtitle">64GB | blu</h3>
+                        <img class="product__img" 
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone XR blue.png" alt="iPhone XR 64GB blu" />
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone XR</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">64GB | blu</h3>
                         <p class="product__description">Acquista iPhone XR senza SIM, in sei splendidi colori. Spedizione gratis in un giorno, resi veloci e gratuiti.</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€739</strike><span> €449</span></div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="product">
+                    <div class="product"
+                    data-aos="fade-up" 
+                     data-aos-duration="1500" 
+                     data-aos-easing="ease-in-out">
                         <div class="product__bg"></div>
-                        <img class="product__img" src="img/HRSiPhone XR yrllow.png" alt="iPhone XR 64GB yellow" style="max-width: 300px !important ;"/>
-                        <h2 class="product__title">iPhone XR</h2>
-                        <h3 class="product__subtitle">128GB | Giallo </h3>
+                        <img class="product__img" 
+                        data-aos="fade-up"
+                        data-aos-duration="1000"
+                        data-aos-easing="ease-in-out"
+                        src="img/HRSiPhone XR yrllow.png" alt="iPhone XR 64GB yellow" style="max-width: 300px !important ;"/>
+                        <h2 class="product__title"
+                        data-aos="fade-in" 
+                        data-aos-duration="1100" 
+                        data-aos-easing="ease-in-out">iPhone XR</h2>
+                        <h3 class="product__subtitle"
+                        data-aos="fade-in" 
+                        data-aos-duration="3000" 
+                        data-aos-easing="ease-in-out">128GB | Giallo </h3>
                         <p class="product__description">Apple iPhone XR è uno degli smartphone iOS più avanzati e completi che ci siano in circolazione. Dispone di un grande display da 6.1 pollici con una risoluzione di 1792×828 pixel.</p>
                         <div class="product__price"><strike style="color:rgba(42, 42, 42, .5); font-size:2rem;">€789</strike><span> €659</span></div>
                     </div>
@@ -158,6 +289,10 @@
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/anime.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
